--- a/app.json
+++ b/app.json
@@ -37,11 +37,18 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router",
-      "expo-local-authentication"
+      "expo-router"
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "0453498e-89be-4586-9bba-aa12c54fdecd"
+      }
     }
   }
 }
