--- a/package.json
+++ b/package.json
@@ -3,16 +3,21 @@
   "main": "index.js",
   "version": "1.0.0",
   "scripts": {
-    "dev": "expo start -c --ios",
-    "dev:android": "expo start -c --android",
+    "dev": "npx expo run:android",
     "clean": "rm -rf .expo node_modules",
-    "postinstall": "npx tailwindcss -i ./global.css -o ./node_modules/.cache/nativewind/global.css"
+    "postinstall": "npx tailwindcss -i ./global.css -o ./node_modules/.cache/nativewind/global.css",
+    "android": "expo run:android",
+    "ios": "expo run:ios"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "5",
+    "@hookform/resolvers": "^3.10.0",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/native": "^7.0.0",
     "@rn-primitives/alert-dialog": "^1.1.0",
     "@rn-primitives/avatar": "~1.1.0",
+    "@rn-primitives/label": "^1.1.0",
     "@rn-primitives/portal": "~1.1.0",
     "@rn-primitives/progress": "~1.1.0",
     "@rn-primitives/slot": "~1.1.0",
@@ -21,6 +26,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "expo": "~52.0.25",
+    "expo-dev-client": "~5.0.9",
     "expo-linking": "~7.0.4",
     "expo-local-authentication": "~15.0.2",
     "expo-navigation-bar": "~4.0.7",
@@ -32,7 +38,9 @@
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-native": "0.76.6",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "^4.0.0",
@@ -41,6 +49,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "3.3.5",
     "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.1",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
