--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-local-authentication": "~15.0.2",
     "expo-navigation-bar": "~4.0.7",
     "expo-router": "~4.0.16",
+    "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.29.20",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.7",
@@ -50,7 +51,7 @@
     "tailwindcss": "3.3.5",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1",
-    "zustand": "^4.4.7"
+    "zustand": "^4.5.6"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
