--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "clsx": "^2.1.1",
     "expo": "~52.0.25",
     "expo-dev-client": "~5.0.9",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.4",
     "expo-local-authentication": "~15.0.2",
     "expo-navigation-bar": "~4.0.7",
@@ -54,8 +55,7 @@
     "tailwindcss": "3.3.5",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1",
-    "zustand": "^4.5.6",
-    "expo-linear-gradient": "~14.0.2"
+    "zustand": "^4.5.6"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
