--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "tailwindcss": "3.3.5",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1",
-    "zustand": "^4.5.6"
+    "zustand": "^4.5.6",
+    "expo-clipboard": "~7.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
