--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@rn-primitives/accordion": "^1.1.0",
     "@rn-primitives/alert-dialog": "^1.1.0",
     "@rn-primitives/avatar": "~1.1.0",
+    "@rn-primitives/dialog": "^1.1.0",
     "@rn-primitives/label": "^1.1.0",
     "@rn-primitives/portal": "~1.1.0",
     "@rn-primitives/progress": "~1.1.0",
@@ -28,6 +29,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "expo": "~52.0.25",
+    "expo-clipboard": "~7.0.1",
     "expo-dev-client": "~5.0.9",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.4",
@@ -55,12 +57,13 @@
     "tailwindcss": "3.3.5",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1",
-    "zustand": "^4.5.6",
-    "expo-clipboard": "~7.0.1"
+    "zustand": "^4.5.6"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@types/react": "~18.3.12",
+    "prettier": "^3.5.2",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "typescript": "^5.3.3"
   },
   "private": true
